Revert "Fix hero character clipping on right side"
This reverts commit 50235e85fc8664b157a153f38f712f3ca8d7c98e.

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  overflow: hidden;
 }
 
 .zone-right {
